# hnswlib-node

./: .clang-format  .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  binding.gyp  commitlint.config.js  eslint.config.mjs  index.js  jest.config.json  package-lock.json  package.json  tsconfig.json  vitest.config.mjs
.github/: dependabot.yml
.github/workflows/: build.yml  commitlint.yml  pull_request.yml  tsd.yml
lib/: index.d.ts  index.js  index.test-d.ts
src/: addon.cc
src/hnswlib/: bruteforce.h  hnswalg.h
test/: BruteforceSearch.test.js  HierarchicalNSW.test.js  InnerProductSpace.test.js  L2Space.test.js
